# piri

./: pyproject.toml  setup.cfg
docs/: index.md  usage.md
piri/: constants.py  mapper.py
piri3/: casting.py  collection_handlers.py  functions.py  handlers.py  iso.py  mapper.py  process.py  schema.py
tests/: iso_test.py  test_mapper.py  test_nested_iterables.py  test_process.py
tests/casting/: test_cast_to_date.py  test_cast_to_decimal.py  test_cast_to_integer.py
tests/collection_handlers/: test_fetch_data_by_keys.py  test_fetch_list_by_keys.py  test_set_value_in_dict.py
tests/functions/: test_apply_casting.py  test_apply_default.py  test_apply_if_statements.py  test_apply_regexp.py  test_apply_seperator.py  test_apply_slicing.py
tests/handlers/: test_handle_attribute.py  test_handle_mapping.py
tests/schema/: conftest.py  test_validate_schema.py
