[tool.poetry]
name = "piri3"
version = "3.0.4"
description = "Configurable and documentable Json transformation and mapping"
authors = ["Shaun Patterson <thomas.borgen@greenbird.com>"]

license = "MIT"
readme = "docs/index.md"
repository = "https://github.com/greenbird/piri"
documentation = "https://greenbird.github.io/piri/"

keywords = [
  "Json mapping",
  "data transformation",
  "json to json",
  "dict to dict",
  "configurable"
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
typing_extensions = ">= 4.0"
pycountry = "19.8.18"
returns = "^0.22.0"
jsonschema = "^3.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
wemake-python-styleguide = "^0.18.0"
pre-commit = "^1.18"
simplejson = "^3.16"

safety = "^1.8"

pytest = "^5.2"
mkdocs-material = "^6.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
